--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="container">
     <h1>CONSULTA DE DOCUMENTAÇÃO</h1>
     <div class="mb-3">
-      <label for="cpfInput" class="form-label">Insira seu CPF:</label>
+      <label for="cpfInput" class="form-label">Digite seu CPF:</label>
       <input type="text" id="cpfInput" class="form-control" placeholder="Digite seu CPF (com ou sem pontuação)">
     </div>
     <div class="d-grid mb-4">
