--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
           contentAux += `<p><strong>STATUS:</strong> ${processStatus(aux.STATUS)}</p>`;
           // Se o status for "EM FILA", adiciona a mensagem solicitada
           if (aux.STATUS.trim().toUpperCase() === "EM FILA") {
-            contentAux += `<p style="color:green; font-weight:bold;">SUA DOCUMENTAÇÃO ESTÁ COMPLETA E EM FILA PARA SER PROTOCOLADA, NÃO HÁ PRAZO NEM A NESSECIDADE DE ENTRAR EM CONTATO. FAVOR ACOMPANHAR O ANDAMENTO POR AQUI.</p>`;
+            contentAux += `<p style="color:green; font-weight:bold;">Sua documentação está completa e aguarda protocolação. Não há prazo definido nem necessidade de contato no momento. Pedimos que acompanhe o andamento por este canal.</p>`;
           }
           // Se o status contiver números, adiciona a mensagem de protocolo
           if (/\d/.test(aux.STATUS)) {
-            contentAux += `<p style="color:green; font-weight:bold;">SEU PROCESSO FOI PROTOCOLADO COM SUCESSO, AGORA, BASTA AGUARDAR O ANDAMENTO DO PROCESSO, QUALQUER NOVIDADE NÓS PRONTAMENTE IREMOS INFORMA-LO INDIVIDUALMENTE.</p>`;
+            contentAux += `<p style="color:green; font-weight:bold;">Seu processo foi protocolado com sucesso. Agora, basta aguardar o andamento. Qualquer novidade será informada a você individualmente e de forma imediata.</p>`;
           }
         }
         if (contentAux.trim() !== "") {
@@ -213,11 +213,11 @@
           contentVPE += `<p><strong>STATUS:</strong> ${processStatus(vpe.STATUS)}</p>`;
           // Se o status for "EM FILA", adiciona a mensagem solicitada
           if (vpe.STATUS.trim().toUpperCase() === "EM FILA") {
-            contentVPE += `<p style="color:green; font-weight:bold;">SUA DOCUMENTAÇÃO ESTÁ COMPLETA E EM FILA PARA SER PROTOCOLADA, NÃO HÁ PRAZO NEM A NESSECIDADE DE ENTRAR EM CONTATO. FAVOR ACOMPANHAR O ANDAMENTO POR AQUI.</p>`;
+            contentVPE += `<p style="color:green; font-weight:bold;">Sua documentação está completa e aguarda protocolação. Não há prazo definido nem necessidade de contato no momento. Pedimos que acompanhe o andamento por este canal.</p>`;
           }
           // Se o status for "SEGUNDA LISTAGEM DE IMPLANTAÇÃO", adiciona a mensagem de implantação
           if (vpe.STATUS.trim().toUpperCase() === "SEGUNDA LISTAGEM DE IMPLANTAÇÃO") {
-            contentVPE += `<p style="color:green; font-weight:bold;">O SEU NOME JÁ ESTÁ INCLUÍDO PARA IMPLANTAÇÃO, NÃO HÁ PRAZO, FAVOR AGUARDAR POIS QUALQUER NOVIDADE IREMOS INFORMAR A TODOS.</p>`;
+            contentVPE += `<p style="color:green; font-weight:bold;">Seu nome já foi incluído para implantação. Não há prazo definido no momento. Pedimos que aguarde, pois qualquer novidade será informada a todos.</p>`;
           }
           // Se o status contiver números, adiciona a mensagem de protocolo
           if (/\d/.test(vpe.STATUS)) {
